--- a/index.html
+++ b/index.html
@@ -10,11 +10,44 @@
       type="text/css"
     />
 
+    <link
+      href="//db.onlinewebfonts.com/c/3f908bf27ca39531334bb55a36cbf143?family=Avalon+Medium"
+      rel="stylesheet"
+      type="text/css"
+    />
+
     <link rel="stylesheet" href="/style.css" />
 
     <title>TNW</title>
   </head>
   <body>
+    <section>
+      <h1 class="section__title title--lg">
+        <a class="section-title__link" href="#none">
+          Latest news
+        </a>
+        <div class="arrow--right"></div>
+      </h1>
+
+      <div class="four-cards">
+        <div class="four-cards__cards">
+          <img
+            class="four-cards__img"
+            src="/images/placeholder.jpg"
+            alt="placeholder"
+          />
+          <h2>
+            Our fragile 40-years-old Banking infrastructure can only be saved
+            with AI
+          </h2>
+          <ul>
+            <li><a href="#none">Cuneyt Buyukbezci</a></li>
+            <li><a href="#none">6 hours ago </a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer__links">
