Added some social media icons

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
           </li>
           <li>
             <a href="#none">
-              <img src="" alt="twitter" />
+              <img src="/images/icons/twitter.svg" alt="twitter" />
             </a>
           </li>
           <li>
             <a href="#none">
-              <img src="" alt="youtube" />
+              <img src="/images/icons/youtube.svg" alt="youtube" />
             </a>
           </li>
           <li>
             <a href="#none">
-              <img src="" alt="instagram" />
+              <img src="/images/icons/instagram.svg" alt="instagram" />
             </a>
           </li>
           <li>
