added more icons

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul class="footer__social-links">
           <li>
             <a href="#none">
-              <img src="" alt="facebook" />
+              <img src="/images/icons/facebook.svg" alt="facebook" />
             </a>
           </li>
           <li>
@@ -118,11 +118,15 @@
         </ul>
       </div>
 
-      <div class="footer__legal">
+      <div class="footer__legal text--md">
         <div>
-          <span><a href=""></a>© 2006–2020 The Next Web B.V. </span>
-          <span></span>
-          <span></span>
+          <span>
+            <a href=""><img src="" alt=""></a>
+            © 2006–2020 The Next Web B.V. Made with 
+            <b style="color: var(--red);">♥</b>
+            in Amsterdam. Powered by
+            <a href=""><img src="" alt=""></a>
+          </span>
         </div>
       </div>
     </footer>
