--- a/index.html
+++ b/index.html
@@ -21,6 +21,34 @@
     <title>TNW</title>
   </head>
   <body>
+    <header class="header">
+      <div class="header__logo">
+        <img src="/images/icons/tnw-logo.svg" alt="tnw-logo">
+      </div>
+      <nav>
+        <ul class="header__nav-list">
+          <li>
+            <a href="">Latest</a>
+          </li>
+          <li>
+            <a href="">Hard Fork</a>
+          </li>
+          <li>
+            <a href="">Plugged</a>
+          </li>
+          <li>
+            <a href="">Readme</a>
+          </li>
+          <li>
+            <a href="">Growth Quarters</a>
+          </li>
+          <li>
+            <a href="">Neural</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <section>
       <h1 class="section__title title--lg">
         <a class="section-title__link" href="#none">
@@ -119,15 +147,33 @@
       </div>
 
       <div class="footer__legal text--md">
-        <div>
-          <span>
-            <a href=""><img src="" alt=""></a>
-            © 2006–2020 The Next Web B.V. Made with 
-            <b style="color: var(--red);">♥</b>
-            in Amsterdam. Powered by
-            <a href=""><img src="" alt=""></a>
-          </span>
-        </div>
+        <span class="footer__legal-content">
+          <a href="">
+            <img
+              class="footer__legal-img"
+              src="/images/icons/tnw-logo.svg"
+              alt="tnw logo"
+            />
+          </a>
+          © 2006–2020 The Next Web B.V.
+        </span>
+
+        <span class="footer__legal-content">
+          Made with
+          <b style="color: var(--red);"> ♥ </b>
+          in Amsterdam.
+        </span>
+
+        <span class="footer__legal-content">
+          Powered by
+          <a href="">
+            <img
+              class="footer__legal-img"
+              src="/images/icons/stackpath.svg"
+              alt="stackpath logo"
+            />
+          </a>
+        </span>
       </div>
     </footer>
     <!-- END: FOOTER -->
