--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
   <body>
     <header class="header">
       <div class="header__logo">
-        <img src="/images/icons/tnw-logo.svg" alt="tnw-logo">
+        <img src="/images/icons/tnw-logo.svg" alt="tnw-logo" />
       </div>
+      
       <nav>
         <ul class="header__nav-list">
           <li>
