--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       type="text/css"
     />
 
+    <link rel="stylesheet" href="/csshelpers.css" />
     <link rel="stylesheet" href="/style.css" />
 
     <title>TNW</title>
@@ -152,13 +153,21 @@
     <!-- SECTION: Latest Deals -->
     <section class="section-margin">
       <div class="container card__container">
-        <div class="section-title__container">
-          <h1 class="section-title title--lg">
-            <a href="#none">
-              Latest deals
-            </a>
-          </h1>
-          <span class="arrow--right"></span>
+        <div
+          class="d-flex justify-content-between align-items-baseline title-mb--lg w-100"
+        >
+          <div class="section-title__container">
+            <h1 class="section-title title--lg">
+              <a href="#none">
+                Latest deals
+              </a>
+            </h1>
+            <span class="arrow--right"></span>
+          </div>
+
+          <div>
+            <p class="text--lg"><a href="#none">See all Deals</a></p>
+          </div>
         </div>
 
         <div class="card">
