--- a/index.html
+++ b/index.html
@@ -25,7 +25,21 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header__logo">
-        <img src="/images/icons/tnw-logo.svg" alt="tnw-logo" />
+        <a href="/">
+          <img src="/images/icons/tnw-logo.svg" alt="tnw-logo" />
+        </a>
+
+        <div class="header-logo__nav">
+          <ul class="header-logo__nav-list">
+            <li><a href=""></a>news</li>
+            <li><a href=""></a>events</li>
+            <li><a href=""></a>index</li>
+            <li><a href=""></a>spaces</li>
+            <li><a href=""></a>deals</li>
+            <li><a href=""></a>answers/li>
+            <li><a href=""></a>TNW X</li>
+          </ul>
+        </div>
       </div>
 
       <nav>
