--- a/index.html
+++ b/index.html
@@ -22,48 +22,102 @@
     <title>TNW</title>
   </head>
   <body>
+    <aside class="black-bar">
+      <ul class="black-bar__list">
+        <li class="active">
+          <a href="#none">news</a>
+        </li>
+        <li>
+          <a href="#none">events</a>
+        </li>
+        <li>
+          <a href="#none">business</a>
+        </li>
+        <li>
+          <a href="#none">AMAs</a>
+        </li>
+        <li>
+          <a href="#none">spaces</a>
+        </li>
+        <li>
+          <a href="#none">terms & conditions</a>
+        </li>
+      </ul>
+
+      <ul class="black-bar__list">
+        <li>
+          <a href="#none">about</a>
+        </li>
+        <li>
+          <a href="#none">advertise</a>
+        </li>
+        <li>
+          <a href="#none">jobs</a>
+        </li>
+        <li>
+          <a href="#none">contact</a>
+        </li>
+      </ul>
+    </aside>
+
     <!-- HEADER -->
     <header class="header">
-      <div class="header__logo">
-        <a href="/">
-          <img src="/images/icons/tnw-logo.svg" alt="tnw-logo" />
-        </a>
+      <div class="header__container-1">
+        <div class="header__logo">
+          <a href="/">
+            <img src="/images/icons/tnw-logo.svg" alt="tnw-logo" />
+          </a>
 
-        <div class="header-logo__nav">
-          <ul class="header-logo__nav-list">
-            <li><a href=""></a>news</li>
-            <li><a href=""></a>events</li>
-            <li><a href=""></a>index</li>
-            <li><a href=""></a>spaces</li>
-            <li><a href=""></a>deals</li>
-            <li><a href=""></a>answers/li>
-            <li><a href=""></a>TNW X</li>
-          </ul>
+          <div class="header-logo__nav">
+            <ul class="header-logo__nav-list">
+              <li>
+                <a class="active" href="#none">news</a>
+              </li>
+              <li>
+                <a href="#none">events</a>
+              </li>
+              <li>
+                <a href="#none">index</a>
+              </li>
+              <li>
+                <a href="#none">spaces</a>
+              </li>
+              <li>
+                <a href="#none">deals</a>
+              </li>
+              <li>
+                <a href="#none">answers</a>
+              </li>
+              <li>
+                <a href="#none">TNW X</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
 
-      <nav>
-        <ul class="header__nav-list">
-          <li>
-            <a href="#none">Latest</a>
-          </li>
-          <li>
-            <a href="#none">Hard Fork</a>
-          </li>
-          <li>
-            <a href="#none">Plugged</a>
-          </li>
-          <li>
-            <a href="#none">Readme</a>
-          </li>
-          <li>
-            <a href="#none">Growth Quarters</a>
-          </li>
-          <li>
-            <a href="#none">Neural</a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="header__nav">
+          <ul class="header__nav-list">
+            <li>
+              <a href="#none">Latest</a>
+            </li>
+            <li>
+              <a href="#none">Hard Fork</a>
+            </li>
+            <li>
+              <a href="#none">Plugged</a>
+            </li>
+            <li>
+              <a href="#none">Readme</a>
+            </li>
+            <li>
+              <a href="#none">Growth Quarters</a>
+            </li>
+            <li>
+              <a href="#none">Neural</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
       <div id="mobile-nav-button" class="mobile-nav-button">
         <span class="mobile-nav-button__bar"></span>
