Added favicon and section latest news

--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Shentox Font -->
     <link
       href="//db.onlinewebfonts.com/c/557661ea24d10fa4d2d85f60f04411d8?family=Shentox"
       rel="stylesheet"
       type="text/css"
     />
 
+    <!-- Avalon+Medium Font -->
     <link
       href="//db.onlinewebfonts.com/c/3f908bf27ca39531334bb55a36cbf143?family=Avalon+Medium"
       rel="stylesheet"
       type="text/css"
     />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon-194x194.png" />
+
     <link rel="stylesheet" href="/csshelpers.css" />
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="/style.css" />
 
     <title>TNW</title>
@@ -218,9 +225,146 @@
     </header>
     <!-- END HEADER -->
 
+    <!-- SECTION: Latest News -->
+    <section class="section-margin">
+      <div class="container">
+        <div class="section-title__container title-mb--lg">
+          <h1 class="section-title title--lg">
+            <a href="#none">
+              Latest news
+            </a>
+          </h1>
+          <span class="arrow--right"></span>
+        </div>
+
+        <div class="card__wrapper">
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder-2.png"
+              alt="placeholder-2"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__author">Matthew Beedham</span>
+              <span class="card__time">36 minutes ago</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END SECTION: Latest news -->
+
     <!-- SECTION: Latest Deals -->
     <section class="section-margin">
-      <div class="container card__container">
+      <div class="container">
         <div
           class="d-flex justify-content-between align-items-baseline title-mb--lg w-100"
         >
@@ -238,123 +382,125 @@
           </div>
         </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+        <div class="card__wrapper">
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img
-            class="card__img"
-            src="/images/placeholder.jpg"
-            alt="placeholder"
-          />
-          <div>
-            <h2 class="card__title">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
-            </h2>
-            <span class="card__price--old">$49</span>
-            <span class="card__price--new">$0</span>
+          <div class="card">
+            <img
+              class="card__img"
+              src="/images/placeholder.jpg"
+              alt="placeholder"
+            />
+            <div>
+              <h2 class="card__title">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              </h2>
+              <span class="card__price--old">$49</span>
+              <span class="card__price--new">$0</span>
+            </div>
           </div>
         </div>
       </div>
